[gd_scene load_steps=31 format=3 uid="uid://dwgu8mmkg8quo"]

[ext_resource type="Texture2D" uid="uid://bmeq00bg8akee" path="res://assets/aseprite/skull_sheet.png" id="1_7h684"]
[ext_resource type="Script" path="res://scripts/movement/player_v_2.gd" id="1_54d81"]
[ext_resource type="Script" path="res://scripts/interaction/interactor.gd" id="2_uxgha"]
[ext_resource type="Shader" path="res://shaders/scroll_texture.gdshader" id="3_bvk4c"]
[ext_resource type="Texture2D" uid="uid://d2l1pl77g5pnn" path="res://assets/aseprite/gui-icons.png" id="4_bl4a1"]
[ext_resource type="Texture2D" uid="uid://c76c8cfvtehev" path="res://assets/aseprite/Line.png" id="4_ow7og"]
[ext_resource type="Script" path="res://scripts/gameplay/trajectory_line_rigidbody.gd" id="7_6jhbs"]
[ext_resource type="Script" path="res://scenes/common/ui/debug_ui.gd" id="7_rdl5g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lf0f5"]
radius = 7.0

[sub_resource type="Animation" id="Animation_apdon"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_da4bg"]
resource_name = "air"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_1sudq"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_1rkso"]
resource_name = "moving"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6rfy8"]
_data = {
"RESET": SubResource("Animation_apdon"),
"air": SubResource("Animation_da4bg"),
"idle": SubResource("Animation_1sudq"),
"moving": SubResource("Animation_1rkso")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_13dtj"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0bde6"]
animation = &"moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dbuxb"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wh3d6"]
advance_mode = 2
advance_expression = "velocity.x != 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_20fog"]
advance_mode = 2
advance_expression = "velocity.x == 0"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_8emne"]
states/idle/node = SubResource("AnimationNodeAnimation_13dtj")
states/idle/position = Vector2(374, 100)
states/moving/node = SubResource("AnimationNodeAnimation_0bde6")
states/moving/position = Vector2(573, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_dbuxb"), "idle", "moving", SubResource("AnimationNodeStateMachineTransition_wh3d6"), "moving", "idle", SubResource("AnimationNodeStateMachineTransition_20fog")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t8qun"]
animation = &"air"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6fcuo"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7caxq"]
advance_mode = 2
advance_expression = "abs(linear_velocity.y) > 5"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ybbcq"]
advance_mode = 2
advance_expression = "not abs(linear_velocity.y) > 5"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_o33xy"]
states/Moving/node = SubResource("AnimationNodeStateMachine_8emne")
states/Moving/position = Vector2(437, 100)
states/Start/position = Vector2(180, 100)
states/air/node = SubResource("AnimationNodeAnimation_t8qun")
states/air/position = Vector2(437, -39)
transitions = ["Start", "Moving", SubResource("AnimationNodeStateMachineTransition_6fcuo"), "Moving", "air", SubResource("AnimationNodeStateMachineTransition_7caxq"), "air", "Moving", SubResource("AnimationNodeStateMachineTransition_ybbcq")]
graph_offset = Vector2(-130, -74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7amv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_roepr"]
atlas = ExtResource("4_bl4a1")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3ea6"]
atlas = ExtResource("4_bl4a1")
region = Rect2(32, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_w4kyt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_roepr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3ea6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_43rpt"]
shader = ExtResource("3_bvk4c")

[node name="Player" type="CharacterBody2D" groups=["Saveable", "player"]]
visibility_layer = 3
collision_mask = 12
floor_stop_on_slope = false
floor_constant_speed = true
script = ExtResource("1_54d81")
push_force = 300.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lf0f5")

[node name="Sprite" type="Sprite2D" parent="."]
physics_interpolation_mode = 1
visibility_layer = 3
position = Vector2(0, -8)
texture = ExtResource("1_7h684")
hframes = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6rfy8")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_o33xy")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[node name="use_interactor" type="Area2D" parent="." groups=["player"]]
top_level = true
script = ExtResource("2_uxgha")

[node name="CollisionShape2D" type="CollisionShape2D" parent="use_interactor"]
shape = SubResource("RectangleShape2D_n7amv")

[node name="Indicator" type="AnimatedSprite2D" parent="use_interactor"]
visible = false
position = Vector2(0, -21)
sprite_frames = SubResource("SpriteFrames_w4kyt")
autoplay = "default"

[node name="TrajectoryLine" type="Line2D" parent="."]
unique_name_in_owner = true
top_level = true
texture_repeat = 2
material = SubResource("ShaderMaterial_43rpt")
texture = ExtResource("4_ow7og")
texture_mode = 1
script = ExtResource("7_6jhbs")

[node name="Debug" type="CanvasLayer" parent="."]
visible = false

[node name="DebugUI" type="Control" parent="Debug"]
layout_mode = 3
anchors_preset = 0
offset_left = 426.0
offset_top = 200.0
offset_right = 625.0
offset_bottom = 347.0
script = ExtResource("7_rdl5g")

[node name="Panel" type="Panel" parent="Debug/DebugUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Debug/DebugUI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Debug/DebugUI/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Debug/DebugUI/Panel/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Upright Request:"

[node name="UprightValue" type="Label" parent="Debug/DebugUI/Panel/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="Debug/DebugUI/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Debug/DebugUI/Panel/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Grounded:"

[node name="GroundedValue" type="Label" parent="Debug/DebugUI/Panel/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer6" type="HBoxContainer" parent="Debug/DebugUI/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Debug/DebugUI/Panel/VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "Jumping:"

[node name="JumpingValue" type="Label" parent="Debug/DebugUI/Panel/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Debug/DebugUI/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Debug/DebugUI/Panel/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Braking:"

[node name="BrakingValue" type="Label" parent="Debug/DebugUI/Panel/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Debug/DebugUI/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Debug/DebugUI/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Velocity:"

[node name="VelocityValue" type="Label" parent="Debug/DebugUI/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Debug/DebugUI/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Debug/DebugUI/Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Rotation:"

[node name="RotationValue" type="Label" parent="Debug/DebugUI/Panel/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RayCasts" groups=["ground_casts"]]
unique_name_in_owner = true
target_position = Vector2(0, 16)
collision_mask = 12

[node name="RayCast2D2" type="RayCast2D" parent="RayCasts" groups=["ground_casts"]]
unique_name_in_owner = true
rotation = 1.5708
target_position = Vector2(0, 16)
collision_mask = 12

[node name="RayCast2D3" type="RayCast2D" parent="RayCasts" groups=["ground_casts"]]
unique_name_in_owner = true
rotation = -1.5708
target_position = Vector2(0, 16)
collision_mask = 12

[node name="RayCast2D4" type="RayCast2D" parent="RayCasts" groups=["ground_casts"]]
unique_name_in_owner = true
rotation = 0.785398
target_position = Vector2(0, 16)
collision_mask = 12

[node name="RayCast2D5" type="RayCast2D" parent="RayCasts" groups=["ground_casts"]]
unique_name_in_owner = true
rotation = -0.785398
target_position = Vector2(0, 16)
collision_mask = 12

[node name="RayCast2D6" type="RayCast2D" parent="RayCasts" groups=["ground_casts"]]
unique_name_in_owner = true
rotation = -3.14159
target_position = Vector2(0, 16)
collision_mask = 12

[node name="RayCast2D7" type="RayCast2D" parent="RayCasts" groups=["ground_casts"]]
unique_name_in_owner = true
rotation = 2.35619
target_position = Vector2(0, 16)
collision_mask = 12

[node name="RayCast2D8" type="RayCast2D" parent="RayCasts" groups=["ground_casts"]]
unique_name_in_owner = true
rotation = -2.35619
target_position = Vector2(0, 16)
collision_mask = 12
